more debugging, found that system blows up without rigid bodies.
what am I doing wrong?

--- a/rigid_bodies.ipynb
+++ b/rigid_bodies.ipynb
@@ -395,7 +395,150 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Try without `create_hoomd_simulation`"
+    "# Try benzene system without rigid bodies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bz_str = \"c1ccccc1\"\n",
+    "bz = mb.load(bz_str, smiles=True, ignore_box_warn=True)\n",
+    "name = \"bz\"\n",
+    "bz.name = name\n",
+    "\n",
+    "box = mb.Box([5,5,5])\n",
+    "system = mb.fill_box(bz, n_compounds=10, box=box, fix_orientation=True)\n",
+    "\n",
+    "gaff = foyer.forcefields.load_GAFF()\n",
+    "pmd_system = system.to_parmed(residues=[name])\n",
+    "typed_system = gaff.apply(system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "notice(2): Group \"all\" created containing 120 particles\n",
+      "notice(2): -- Neighborlist exclusion statistics -- :\n",
+      "notice(2): Particles with 3 exclusions             : 60\n",
+      "notice(2): Particles with 7 exclusions             : 60\n",
+      "notice(2): Neighbors included by diameter          : no\n",
+      "notice(2): Neighbors excluded when in the same body: no\n",
+      "Processing LJ and QQ\n",
+      "notice(2): Group \"charged\" created containing 0 particles\n",
+      "No charged groups found, ignoring electrostatics\n",
+      "Processing 1-4 interactions, adjusting neighborlist exclusions\n",
+      "Processing harmonic bonds\n",
+      "Processing harmonic angles\n",
+      "Processing periodic torsions\n",
+      "HOOMD SimulationContext updated from ParmEd Structure\n",
+      "notice(2): integrate.langevin/bd is using specified gamma values\n",
+      "** starting run **\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "**ERROR**: Particle with unique tag 31 is no longer in the simulation box.\n",
+      "\n",
+      "Cartesian coordinates: \n",
+      "x: 90.9301 y: 132.755 z: 4.10583\n",
+      "Fractional coordinates: \n",
+      "f.x: 6.68265 f.y: 9.52643 f.z: 0.779169\n",
+      "Local box lo: (-7.35366, -7.35366, -7.35366)\n",
+      "          hi: (7.35366, 7.35366, 7.35366)\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error computing cell list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-30d3b8bb8abc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mhoomd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlangevin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhoomd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkT\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mhoomd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgsd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"start.gsd\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moverwrite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperiod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroup\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhoomd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtime_step\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mhoomd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1e4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mhoomd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgsd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"after.gsd\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moverwrite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperiod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroup\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhoomd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/planckton-dev/lib/python3.7/site-packages/hoomd/__init__.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(tsteps, profile, limit_hours, limit_multiple, callback_period, callback, quiet)\u001b[0m\n\u001b[1;32m    199\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mquiet\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    200\u001b[0m         \u001b[0mcontext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnotice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"** starting run **\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 201\u001b[0;31m     \u001b[0mcontext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcurrent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtsteps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallback_period\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallback\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlimit_hours\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlimit_multiple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    202\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mquiet\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    203\u001b[0m         \u001b[0mcontext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnotice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"** run complete **\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Error computing cell list"
+     ]
+    }
+   ],
+   "source": [
+    "sim_norigid = hoomd.context.SimulationContext()\n",
+    "\n",
+    "with sim_norigid:\n",
+    "    hoomd_objects, ref_values = create_hoomd_simulation(typed_system, auto_scale=True)\n",
+    "    hoomd.md.integrate.mode_standard(dt=0.005);\n",
+    "    hoomd.md.integrate.langevin(group=hoomd.group.all(), kT=1.0, seed=42);\n",
+    "    hoomd.dump.gsd(filename=\"start.gsd\", overwrite=True, period=None, group=hoomd.group.all(), time_step=0)\n",
+    "    hoomd.run(1e4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<hoomd.md.pair.lj object at 0x14ae12450>\n",
+      "{('ca', 'ca'): {'sigma': 1.0, 'epsilon': 1.0, 'r_cut': 1.2, 'r_on': 1.2, 'alpha': 1.0}, ('ha', 'ha'): {'sigma': 0.7646750524109015, 'epsilon': 0.17441860465116277, 'r_cut': 1.2, 'r_on': 1.2, 'alpha': 1.0}, ('ca', 'ha'): {'sigma': 0.8744570043237697, 'epsilon': 0.41763453479227836, 'r_cut': 1.2, 'r_on': 1.2, 'alpha': 1.0}} \n",
+      "\n",
+      "<hoomd.md.special_pair.lj object at 0x108648850>\n",
+      "{'ca-ca': {'sigma': 1.0, 'epsilon': 0.5, 'alpha': 1, 'r_cut': 1.2}, 'ca-ha': {'sigma': 0.8823375262054506, 'epsilon': 0.20881726739613915, 'alpha': 1, 'r_cut': 1.2}, 'ha-ha': {'sigma': 0.7646750524109015, 'epsilon': 0.08720930232558138, 'alpha': 1, 'r_cut': 1.2}} \n",
+      "\n",
+      "<hoomd.md.special_pair.coulomb object at 0x108648f90>\n",
+      "{'ca-ca': {'alpha': 1.0, 'r_cut': 1.2}, 'ca-ha': {'alpha': 1.0, 'r_cut': 1.2}, 'ha-ha': {'alpha': 1.0, 'r_cut': 1.2}} \n",
+      "\n",
+      "<hoomd.md.bond.harmonic object at 0x1405368d0>\n",
+      "{'ca-ca': {'k': 123936.73954965871, 'r0': 0.41133410072217697}, 'ca-ha': {'k': 92945.83503854259, 'r0': 0.31944281563521465}}\n",
+      "<hoomd.md.angle.harmonic object at 0x140536c90>\n",
+      "{'ca-ca-ca': {'t0': 2.094744168243594, 'k': 1548.8372093023256}, 'ca-ca-ha': {'t0': 2.092300707290802, 'k': 1120.9302325581398}}\n",
+      "<hoomd.md.dihedral.harmonic object at 0x1405367d0>\n",
+      "{'ca-ca-ca-ca': {'k': 84.30232558139535, 'd': 1, 'n': 2, 'phi_0': 3.141592653589793}, 'ca-ca-ca-ha': {'k': 84.30232558139535, 'd': 1, 'n': 2, 'phi_0': 3.141592653589793}, 'ha-ca-ca-ha': {'k': 84.30232558139535, 'd': 1, 'n': 2, 'phi_0': 3.141592653589793}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for force in sim_norigid.forces:\n",
+    "    print(force)\n",
+    "    try:\n",
+    "        print(force.pair_coeff.values,\"\\n\")\n",
+    "    except AttributeError:\n",
+    "        try:\n",
+    "            print(force.dihedral_coeff.values)\n",
+    "        except AttributeError:\n",
+    "            try:\n",
+    "                print(force.angle_coeff.values)    \n",
+    "            except AttributeError:\n",
+    "                print(force.bond_coeff.values)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with sim_norigid:\n",
+    "    hoomd.dump.gsd(filename=\"after.gsd\", overwrite=True, period=None, group=hoomd.group.all())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Try toy system (hexagons) without `create_hoomd_simulation`"
    ]
   },
   {
