rigid bodies are working and moit is (i think correctly) set!

--- a/rigid_bodies.ipynb
+++ b/rigid_bodies.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,6 +241,54 @@
     "    snap.particles.position[i] = np.mean(snap.particles.position[inds], axis=0)\n",
     "    snap.particles.body[i] = i\n",
     "    snap.particles.body[inds] = i * np.ones(len(ring))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I am using [this example](http://farside.ph.utexas.edu/teaching/336k/Newtonhtml/node64.html) for how to calculate the moment of inertia tensor (also Matty/Mike/someone's code from cmeutils)\n",
+    "\n",
+    "From [hoomd docs](https://hoomd-blue.readthedocs.io/en/v2.9.3/module-md-constrain.html#hoomd.md.constrain.rigid)\n",
+    ">The mass and moment of inertia of the central particle set the full mass and moment of inertia of the rigid body (constituent particle mass is ignored).\n",
+    "\n",
+    ">The central particle is at the center of mass of the rigid body and the orientation quaternion defines the rotation from the body space into the simulation box. In body space, the center of mass of the body is at 0,0,0 and the moment of inertia is diagonal. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def moit(points, masses, center=np.zeros(3)):  \n",
+    "    \"\"\"\n",
+    "    Moment of Inertia Tensor                                                    \n",
+    "    Assumes rigid body center is at origin unless center is provided                                           \n",
+    "    Assumes 3xN array for points, 1xN for masses\n",
+    "    \"\"\"  \n",
+    "    points -= center\n",
+    "    x = points[:, 0]                                                               \n",
+    "    y = points[:, 1]                                                               \n",
+    "    z = points[:, 2]                                                               \n",
+    "    I_xx = np.sum((y ** 2 + z ** 2) * masses)                                           \n",
+    "    I_yy = np.sum((x ** 2 + z ** 2) * masses)                                           \n",
+    "    I_zz = np.sum((x ** 2 + y ** 2) * masses)                                           \n",
+    "    return np.array((I_xx, I_yy, I_zz))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,ring in enumerate(rings):\n",
+    "    inds = ring + len(rings)\n",
+    "    snap.particles.moment_inertia[i] = moit(\n",
+    "        snap.particles.position[inds], snap.particles.mass[inds], center=snap.particles.position[i]\n",
+    "    )\n",
+    "    snap.particles.mass[i] = np.sum(snap.particles.mass[inds])"
    ]
   },
   {
@@ -269,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +377,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "*Warning*: Integrator #0: Anisotropic integration requested, but no rotational degrees of freedom found for its group\n",
       "*Warning*: Integrator #1: Anisotropic integration requested, but no rotational degrees of freedom found for its group\n"
      ]
     },
@@ -337,16 +384,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time 00:00:01 | Step 10000 / 10000 | TPS 7132.78 | ETA 00:00:00\n",
-      "Average TPS: 7127.49\n",
+      "Time 00:10:17 | Step 50000 / 50000 | TPS 9171.55 | ETA 00:00:00\n",
+      "Average TPS: 9170.09\n",
       "---------\n",
       "-- Neighborlist stats:\n",
-      "0 normal updates / 100 forced updates / 0 dangerous updates\n",
-      "n_neigh_min: 0 / n_neigh_max: 5 / n_neigh_avg: 1.61538\n",
+      "0 normal updates / 500 forced updates / 0 dangerous updates\n",
+      "n_neigh_min: 0 / n_neigh_max: 6 / n_neigh_avg: 1.61538\n",
       "shortest rebuild period: 100\n",
       "-- Cell list stats:\n",
       "Dimension: 9, 9, 9\n",
-      "n_min    : 0 / n_max: 10 / n_avg: 0.178326\n",
+      "n_min    : 0 / n_max: 12 / n_avg: 0.178326\n",
       "** run complete **\n"
      ]
     }
