Rigid body example is working in this commit
I'm going to start deleting some of my scratch after this point and
working on modifying planckton's init and sim functions

--- a/rigid_bodies.ipynb
+++ b/rigid_bodies.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jenny/miniconda3/envs/planckton-dev/lib/python3.7/site-packages/mdtraj/core/trajectory.py:32: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3,and in 3.9 it will stop working\n",
-      "  from collections import Iterable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import foyer\n",
     "import hoomd\n",
@@ -30,13 +21,37 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from planckton.utils.rigid import connect_rings"
+    "from planckton.utils.rigid import connect_rings, moit\n",
+    "from planckton.init import Compound, Pack"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# trying to modify planckton's init and sim functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Working example with Rigid Bodies\n",
+    "\n",
     "Let's start with a simple case--a benzene molcule."
    ]
   },
@@ -253,28 +268,6 @@
     ">The mass and moment of inertia of the central particle set the full mass and moment of inertia of the rigid body (constituent particle mass is ignored).\n",
     "\n",
     ">The central particle is at the center of mass of the rigid body and the orientation quaternion defines the rotation from the body space into the simulation box. In body space, the center of mass of the body is at 0,0,0 and the moment of inertia is diagonal. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def moit(points, masses, center=np.zeros(3)):  \n",
-    "    \"\"\"\n",
-    "    Moment of Inertia Tensor                                                    \n",
-    "    Assumes rigid body center is at origin unless center is provided                                           \n",
-    "    Assumes 3xN array for points, 1xN for masses\n",
-    "    \"\"\"  \n",
-    "    points -= center\n",
-    "    x = points[:, 0]                                                               \n",
-    "    y = points[:, 1]                                                               \n",
-    "    z = points[:, 2]                                                               \n",
-    "    I_xx = np.sum((y ** 2 + z ** 2) * masses)                                           \n",
-    "    I_yy = np.sum((x ** 2 + z ** 2) * masses)                                           \n",
-    "    I_zz = np.sum((x ** 2 + y ** 2) * masses)                                           \n",
-    "    return np.array((I_xx, I_yy, I_zz))  "
    ]
   },
   {
